--- a/l/lu/luc/lucidpress.com.html
+++ b/l/lu/luc/lucidpress.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the lucidpress.com privacy policy that was archived on 2013-10-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131031052515id_/https%3A//www.lucidpress.com/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lucidpress.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214123150id_/https%3A//www.lucidpress.com/pages/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0" dir="ltr" xmlns:og="http://ogp.me/ns#"><head profile="http://www.w3.org/1999/xhtml/vocab">
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0" dir="ltr"><head profile="http://www.w3.org/1999/xhtml/vocab">
 	<style type="text/css">
 		header
 		,nav
@@ -22,13 +22,13 @@
 
 This Lucidpress Privacy Policy describes how we treat personal information when you use Lucidpress' services, including information provided to Lucidpress.
 
-July 30, 2010">
+Updated December 13, 2013">
 <meta property="og:title" content="Privacy Policy">
 <meta property="og:description" content="Lucidpress Privacy Policy
 
 This Lucidpress Privacy Policy describes how we treat personal information when you use Lucidpress' services, including information provided to Lucidpress.
 
-July 30, 2010">
+Updated December 13, 2013">
 	<title>Privacy Policy | Lucidpress</title>
 	<link type="text/css" rel="stylesheet" href="https://www.lucidpress.com/pages/sites/default/files/css/css_n-lbLzT-hGu6L_G1Whv85a93Ecf67CbPHZ2QxMfvnkA.css" media="all">
 <link type="text/css" rel="stylesheet" href="https://www.lucidpress.com/pages/sites/default/files/css/css_sdyyIuqV_D0sgcuYxlQjQRjXrhAHul_ByaHN6dBpqGw.css" media="all">
@@ -44,7 +44,7 @@ July 30, 2010">
 	<script type="text/javascript" async="" src="//doug1izaerwt3.cloudfront.net/97d3f65032112221645075836786b6a2d73cfab0.1.js"></script><script type="text/javascript" async="" src="//i.kissmetrics.com/i.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="https://www.lucidpress.com/pages/sites/default/files/js/js_xAPl0qIk9eowy_iS9tNkCWXLUVoat94SQT48UBCFkyQ.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/pages\/","pathPrefix":"","ajaxPageState":{"theme":"lucid","theme_token":"L_hJVqOBPp_Vy_JMCcBbk-3vjBbmMD91572iSngoa1s","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/amazon_s3\/amazon_s3.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"themes\/lucid\/css\/ie7.css":1,"themes\/lucid\/css\/ie6.css":1}}});
+jQuery.extend(Drupal.settings, {"basePath":"\/pages\/","pathPrefix":"","ajaxPageState":{"theme":"lucid","theme_token":"h9VMPDvvHftk5g434YM0-rRfa6owTnKVAYS8jmaoj6o","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/amazon_s3\/amazon_s3.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"themes\/lucid\/css\/ie7.css":1,"themes\/lucid\/css\/ie6.css":1}}});
 //--><!]]>
 </script>
 	<link rel="stylesheet" type="text/css" href="/css/sites/press/style.css">
@@ -98,11 +98,11 @@ jQuery.extend(Drupal.settings, {"basePath":"\/pages\/","pathPrefix":"","ajaxPage
 
 <p class="large">This Lucidpress Privacy Policy describes how we treat personal information when you use Lucidpress' services, including information provided to Lucidpress.</p>
 
-<p>July 30, 2010
+<em><p>Updated December 13, 2013</p></em>
 
-</p><h2>Personal Information</h2>
+<h2>Personal Information</h2>
 
-<ul><li>Account activity. You need a Lucid Account to create layout and design documents in Lucidpress. Lucid asks for some personal information when you create a Lucid Account, including your email address and a password, which is used to protect your account from unauthorized access. Lucid's servers automatically record certain information about your use of Lucidpress. Similar to other web services, Lucid records information such as account activity (e.g., storage usage, number of log-ins, actions taken), data displayed or clicked on (e.g., UI elements, links), and other log information (e.g. browser type, IP address, date and time of access, cookie ID, referrer URL, etc.). Lucidpress may collect automated error reports in the case of software malfunction; such error reports may contain some or all of the information in your documents and may be reviewed to help resolve problems with the Lucidpress software or service.</li>
+<ul><li>Account activity. You need a Lucid Account to create layout and design documents in Lucidpress. Lucid asks for some personal information when you create a Lucid Account, including your email address and a password, which is used to protect your account from unauthorized access. Lucid's servers automatically record certain information about your use of Lucidpress. Similar to other web services, Lucid records information such as account activity (e.g., storage usage, number of log-ins, actions taken), data displayed or clicked on (e.g., UI elements, links), and other log information (e.g., browser type, IP address, date and time of access, cookie ID, referrer URL, etc.). Lucidpress may collect automated error reports in the case of software malfunction; such error reports may contain some or all of the information in your documents and may be reviewed to help resolve problems with the Lucidpress software or service.</li>
 
 <li>Content. Lucidpress stores, processes and maintains your files (as well as previous versions of your files), sharing lists, and other data related to your account in order to provide the service to you.</li></ul><h2>Uses</h2>
 <ul><li>We use this information internally to deliver the best possible service to you, such as improving the Lucidpress user interface and maintaining a consistent and reliable user experience.</li>
@@ -168,19 +168,42 @@ jQuery.extend(Drupal.settings, {"basePath":"\/pages\/","pathPrefix":"","ajaxPage
 </script><ul class="left"><h3>Lucidpress</h3>
 	<li><a href="/documents/demo">Demo</a></li>
 	<li><a href="/users/register">Sign Up</a></li>
-	<li><a href="http://support.lucidpress.com">Forums</a></li>
-	<li><a href="http://support.lucidpress.com/categories/20121236-Tutorials">Tutorials</a></li>
+	<li><a href="#footer-documents" class="submenu">Documents</a><!--<div class="ui-icon ui-icon-triangle-1-e"></div>--></li>
+	<li><a href="/pages/tour">Tour</a></li>
+</ul><div class="left">
+	<h3>&nbsp;</h3>
+	<ul id="footer-documents" class="left hidden"><li><a href="/pages/examples/free-brochure-maker-online">Brochure maker</a></li>
+		<li><a href="/pages/examples/free-flyer-maker-online">Flyer maker</a></li>
+		<li><a href="/pages/examples/free-digital-magazine-software">Magazine software</a></li>
+		<li><a href="/pages/examples/free-newsletter-software">Newsletter software</a></li>
+		<li><a href="/pages/examples/free-pamphlet-maker-online">Pamphlet maker</a></li>
+		<li><a href="/pages/examples/free-online-poster-maker">Poster maker</a></li>
+	</ul></div>
 
-</ul><ul class="left"><h3>About</h3>
+<ul class="left"><h3>About</h3>
 	<li><a href="/pages/press">Press</a></li>
 	<li><a href="/pages/tos">Terms</a></li>
 	<li><a href="/pages/privacy">Privacy</a></li>
 	<li><a href="/contact">Contact</a></li>
-</ul><ul class="left"><h3>Lucid Software</h3>
+</ul><ul class="left"><h3>Resources</h3>
+	<li><a href="http://support.lucidpress.com">Forums</a></li>
+	<li><a href="http://support.lucidpress.com/categories/20121236-Tutorials">Tutorials</a></li>
+	<li><a href="#footer-howto" class="submenu">How-To</a><!--<div class="ui-icon ui-icon-triangle-1-e"></div>--></li>
+
+</ul><div class="left">
+	<h3>&nbsp;</h3>
+	<ul id="footer-howto" class="left hidden"><li><a href="/pages/how-to-make-a-brochure">How to Make a Brochure</a></li>
+		<li><a href="/pages/how-to-make-a-flyer">How to Make a Flyer</a></li>
+		<li><a href="/pages/how-to-make-a-magazine">How to Make a Magazine</a></li>
+		<li><a href="/pages/how-to-make-a-newsletter">How to Make a Newsletter</a></li>
+		<li><a href="/pages/how-to-make-a-poster">How to Make a Poster</a></li>
+	</ul></div>
+
+<ul class="left"><h3>Lucid Software</h3>
 	<li><a href="https://www.lucidchart.com" target="_blank">Lucidchart</a></li>
 	<li><a href="https://www.lucidpress.com">Lucidpress</a></li>
-	<li><a href="/pages/about">Team</a></li>
-	<li><a href="/pages/jobs">Jobs</a></li>
+	<li><a href="https://www.golucid.co/#team" target="_blank">Team</a></li>
+	<li><a href="https://www.golucid.co/jobs" target="_blank">Jobs</a></li>
 
 </ul><div class="social-links">
 	<div>
@@ -261,4 +284,4 @@ jQuery.extend(Drupal.settings, {"basePath":"\/pages\/","pathPrefix":"","ajaxPage
 	<script type="text/javascript" src="https://tags.mediaforge.com/js/1180"></script>
 
 
-<div id="fancybox-tmp"></div><div id="fancybox-loading"><div></div></div><div id="fancybox-overlay"></div><div id="fancybox-wrap"><div id="fancybox-outer"><div class="fancy-bg" id="fancy-bg-n"></div><div class="fancy-bg" id="fancy-bg-ne"></div><div class="fancy-bg" id="fancy-bg-e"></div><div class="fancy-bg" id="fancy-bg-se"></div><div class="fancy-bg" id="fancy-bg-s"></div><div class="fancy-bg" id="fancy-bg-sw"></div><div class="fancy-bg" id="fancy-bg-w"></div><div class="fancy-bg" id="fancy-bg-nw"></div><div id="fancybox-inner"></div><a id="fancybox-close"></a><a href="javascript:;" id="fancybox-left"><span class="fancy-ico" id="fancybox-left-ico"></span></a><a href="javascript:;" id="fancybox-right"><span class="fancy-ico" id="fancybox-right-ico"></span></a></div></div><iframe class="hidden" src="/documents/preloadChart"></iframe></body></html>
+<div id="fancybox-tmp"></div><div id="fancybox-loading"><div></div></div><div id="fancybox-overlay"></div><div id="fancybox-wrap"><div id="fancybox-outer"><div class="fancybox-bg" id="fancybox-bg-n"></div><div class="fancybox-bg" id="fancybox-bg-ne"></div><div class="fancybox-bg" id="fancybox-bg-e"></div><div class="fancybox-bg" id="fancybox-bg-se"></div><div class="fancybox-bg" id="fancybox-bg-s"></div><div class="fancybox-bg" id="fancybox-bg-sw"></div><div class="fancybox-bg" id="fancybox-bg-w"></div><div class="fancybox-bg" id="fancybox-bg-nw"></div><div id="fancybox-content"></div><a id="fancybox-close"></a><div id="fancybox-title"></div><a href="javascript:;" id="fancybox-left"><span class="fancy-ico" id="fancybox-left-ico"></span></a><a href="javascript:;" id="fancybox-right"><span class="fancy-ico" id="fancybox-right-ico"></span></a></div></div><iframe class="hidden" src="/documents/preloadChart"></iframe></body></html>
