--- a/u/un/unl/unlimitedgb.com.html
+++ b/u/un/unl/unlimitedgb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the unlimitedgb.com privacy policy that was archived on 2013-09-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130921040749id_/https%3A//www.unlimitedgb.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the unlimitedgb.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214123456id_/https%3A//www.unlimitedgb.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -235,29 +235,29 @@ html, body {
     <a class="menulink"><span style="background-image:url(templates/unlimitedgb/images/INR.gif)">INR - Indian Rupees</span></a>
         <ul>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="USD" id="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/USD.gif)">USD - United States</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="USD" id="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/USD.gif)">USD - United States</span></label></form></li>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="GBP" id="GBP"><input type="hidden" name="currency" value="4"><label for="GBP"><span style="background-image:url(templates/unlimitedgb/images/GBP.gif)">GBP - United Kingdom</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="GBP" id="GBP"><input type="hidden" name="currency" value="4"><label for="GBP"><span style="background-image:url(templates/unlimitedgb/images/GBP.gif)">GBP - United Kingdom</span></label></form></li>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="EUR" id="EUR"><input type="hidden" name="currency" value="3"><label for="EUR"><span style="background-image:url(templates/unlimitedgb/images/EUR.gif)">EUR - Europe</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="EUR" id="EUR"><input type="hidden" name="currency" value="3"><label for="EUR"><span style="background-image:url(templates/unlimitedgb/images/EUR.gif)">EUR - Europe</span></label></form></li>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/AUD.gif)">AUD - Australia</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/AUD.gif)">AUD - Australia</span></label></form></li>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/CAD.gif)">CAD - Canada</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/CAD.gif)">CAD - Canada</span></label></form></li>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/NZD.gif)">NZD - New Zealand</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/NZD.gif)">NZD - New Zealand</span></label></form></li>
 	  <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="INR" id="INR"><input type="hidden" name="currency" value="1"><label for="INR"><span style="background-image:url(templates/unlimitedgb/images/INR.gif)">INR - India</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="INR" id="INR"><input type="hidden" name="currency" value="1"><label for="INR"><span style="background-image:url(templates/unlimitedgb/images/INR.gif)">INR - India</span></label></form></li>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/AED.gif)">AED - Arab Emirates</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/AED.gif)">AED - Arab Emirates</span></label></form></li>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/MYR.gif)">MYR - Malaysia</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/MYR.gif)">MYR - Malaysia</span></label></form></li>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/SGD.gif)">SGD - Singapore</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/SGD.gif)">SGD - Singapore</span></label></form></li>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/THB.gif)">THB - Thailand</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/THB.gif)">THB - Thailand</span></label></form></li>
       <li><form method="post" action="">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/IDR.gif)">IDR - Indonesia</span></label></form></li>
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d"><input type="radio" class="item" onclick="submit()" name="language" value="USD"><input type="hidden" name="currency" value="2"><label for="USD"><span style="background-image:url(templates/unlimitedgb/images/IDR.gif)">IDR - Indonesia</span></label></form></li>
     </ul>  </li>
 </ul>
 <script type="text/javascript">var menu=new menu.dd("menu"); menu.init("menu","menuhover"); </script>
@@ -636,7 +636,7 @@ regardless of whether you have read them or not.</p>
 <div id="box_login">
 <h3>Secure Customer Login</h3>
    <form method="post" action="dologin.php">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb">
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d">
   <dl>
     <dt>Email Address</dt><dd><input name="username" type="text" value="" class="inputbox1"></dd>
     <dt>Password</dt><dd><input name="password" type="password" value="" class="inputbox1"></dd>
@@ -674,7 +674,7 @@ regardless of whether you have read them or not.</p>
 <div id="box_search">
 <h3>Search Resources</h3>
 <form method="post" action="knowledgebase.php?action=search">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb">
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d">
   <dl>
     <dd><select name="searchin"><option value="Knowledgebase">Knowledgebase</option><option value="Downloads">Downloads</option></select></dd>
     <dd><input name="search" type="text" class="inputbox1"></dd>
@@ -695,7 +695,7 @@ regardless of whether you have read them or not.</p>
   <h3>Send Instant Message (SMS)</h3>
     <p>Enter your contact number with your message &amp; a representative will contact you immediately</p>
 	<form action="https://www.unlimitedgb.com/data/websms.php" name="sms" method="post">
-<input type="hidden" name="token" value="c429e0172136185348ffd6ab53eb4d798908bccb">
+<input type="hidden" name="token" value="3e61f64bbead1b408663c471e6f9167b22bb196d">
 	<textarea name="message" cols="0" rows="0" style="color:#FFFFFF; border:1px solid #908157; background-image: url('https://www.unlimitedgb.com/data/images/smsbg.png')" onkeydown="textCounter(document.sms.message,document.sms.remLen1,155)" onkeyup="textCounter(document.sms.message,document.sms.remLen1,155)"></textarea><span style="font-size: 3pt">&nbsp;&nbsp;</span><input readonly="readonly" type="text" name="remLen1" size="2" maxlength="3" value="155" style="color:#CCCCCC; border:1px solid #908157; background-image: url('https://www.unlimitedgb.com/data/images/smsbg.png')">
 	<font color="#CCCCCC">To.. </font><select name="department" style="background-color:#BA0C0C; scrollbar-face-color:#aaaaaa;scrollbar-face-color:#aaaaaa;scrollbar-arrow-color:#aaaaaa; height:20px; border:0px solid #908157; margin-right:5px;">
 	<option selected="selected" disabled="disabled" style="color:#CCCCCC; border:1px solid #908157; background-color:#A30B0A;"></option>
@@ -716,7 +716,7 @@ myContactForm.required( "message,department" );
 
   <p>
   
-Keep that great customer service approach up as I as a Business Owner think you are the best. My friends have also appreciated your teams timely service and Great Support. 
+I know that I need to sincerely thank you and the staffs at UnlimitedGB for your continued support. You are really dedicated to your profession. Keep up the great work. 
   
   </p><p class="signature"><a target="_blank" href="http://www.shopperapproved.com/certificates/UnlimitedGB.com/"><u>Read More...</u></a></p>
   
@@ -736,7 +736,7 @@ Keep that great customer service approach up as I as a Business Owner think you 
     <tbody><tr>
       <td width="250">  <span style="padding-left:10px;"><a href="https://www.unlimitedgb.com/web-hosting-india.html"><img border="0" src="data/images/cloudhostingindia.gif" alt="Cloud Web Hosting India" width="70" height="16"></a><a target="_blank" href="http://www.twitter.com/UnlimitedGB"><img border="0" src="data/images/twitter.gif" alt="Follow UnlimitedGB™ on Twitter" width="21" height="16"></a><a target="_blank" href="http://www.facebook.com/UnlimitedGB"><img border="0" src="data/images/facebook.gif" alt="Find UnlimitedGB™ on Facebook" width="21" height="16"></a><a target="_blank" href="http://blog.unlimitedgb.com"><img border="0" src="data/images/blog.gif" alt="Official UnlimitedGB™ Blog" width="21" height="16"></a><a target="_blank" href="http://www.youtube.com/UnlimitedGB"><img border="0" src="data/images/youtube.gif" alt="Watch UnlimitedGB™ on YouTube" width="16" height="16"></a></span></td>
       <td width="65%"><div style="padding-left:10px;"><font style="font-size: 6.5pt">
-      COPYRIGHTS © 1995-2013 <a target="_blank" href="http://www.interweb.co.in/">Interweb iTech (India) Private Limited</a> <a href="https://www.unlimitedgb.com/coimbatore-jobs.html">-</a> <a href="https://www.unlimitedgb.com/">UnlimitedGB.com</a>. ALL RIGHTS RESERVED. <span style="color:#E0E0E0;display:inline" class="author">Nishita Patel</span></font></div></td>
+      COPYRIGHTS © 1995-2014 <a target="_blank" href="http://www.interweb.co.in/">Interweb iTech (India) Private Limited</a> <a href="https://www.unlimitedgb.com/coimbatore-jobs.html">-</a> <a href="https://www.unlimitedgb.com/">UnlimitedGB.com</a>. ALL RIGHTS RESERVED. <span style="color:#E0E0E0;display:inline" class="author">Nishita Patel</span></font></div></td>
       <td width="100">&nbsp;</td>
     </tr>
   </tbody></table>
