--- a/g/ge/get/getindexed.net.html
+++ b/g/ge/get/getindexed.net.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the getindexed.net privacy policy that was archived on 2013-05-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130509065028id_/http%3A//directory.getindexed.net/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the getindexed.net privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214130153id_/http%3A//directory.getindexed.net/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>Get Indexed Directory </title><meta http-equiv="Content-Type" content="text/html; charset=utf8"><style>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>Get Indexed Directory </title><meta http-equiv="Content-Type" content="text/html; charset=utf8"><script src="/jquery-1.10.2.js"></script>
+<style>
 body { 
  background: #f3f3f3 url('http://images.ientrymail.com/getindexed/images/bg.jpg') repeat-x;
 	font-family: Verdana, Tahoma, Arial, sans-serif;
@@ -290,7 +291,8 @@ div.footer a:hover{
 </center>
 <br><center><script language="JavaScript" src="http://aj.600z.com/aj/77812/0/vj?z=1&amp;dim=144"></script></center><br>
 <table width="717" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF"><tbody><tr><td width="500" valign="top">
-<table width="500" border="0" align="center" cellpadding="0" cellspacing="0" style="padding-left: 10px;"><tbody><tr> <td><br><div class="headbar">Categories</div></td></tr></tbody></table><b style="font-size: 16px;" class="mainarticle">Privacy Policy</b>
+<table width="500" border="0" align="center" cellpadding="0" cellspacing="0" style="padding-left: 10px;"><tbody><tr> <td><br><div class="headbar">Categories</div></td></tr></tbody></table>
+<b style="font-size: 16px;" class="mainarticle">Privacy Policy</b>
 
 <br><br>
 iEntry reserves the right to change this policy at any time by notifying users through a notice posted on iEntry.com or by email, of the existence of a new privacy policy or any updates. 
@@ -316,10 +318,18 @@ Should you ever wish to be removed from our database, simply contact us and we w
  <td height="26"><br><center><div class="headbar">Search</div></center></td>
  </tr>
  <tr>
- <td><br><center><form action="/search.html" method="get">
-<input type="text" name="q" size="20" style="font-size: 8pt; font-family: Tahoma;">
+ <td><br><center><form method="get" id="search-submit">
+<input type="text" id="qu" name="q" size="20" style="font-size: 8pt; font-family: Tahoma;">
 <input type="image" src="http://images.ientrymail.com/getindexed/images/sd_19.jpg" alt="Search">
-</form><center><br></center></center></td>
+</form><script>
+    $("#search-submit").submit(function(e){
+                e.preventDefault();
+                var qq = $('#qu').val();
+              window.location.href = '/sch' + '.html' + '?q=' + qq;
+              return FALSE;
+            });
+
+  </script><center><br></center></center></td>
  </tr>
 
  <tr>
@@ -328,7 +338,7 @@ Should you ever wish to be removed from our database, simply contact us and we w
 </tbody></table>
 </td></tr></tbody></table> <table border="0" align="center" cellpadding="0" cellspacing="0">
  <tbody><tr>
- <td><center><div class="footer"><font color="#FFFFFF"><a href="http://www.GetIndexed.net">GetIndexed.net</a> ©2013 <a href="/privacy.html">Privacy Policy</a> and <a href="/legal.html">Legal</a></font><br><font color="#000000"><a href="/" style="color:#000000;">Home</a>&nbsp;|&nbsp;<a style="color:#000000;" href="/about.html">About</a>&nbsp;|&nbsp;<a style="color:#000000;" href="/newsletter.html">Newsletter</a>&nbsp;|&nbsp;<a style="color:#000000;" href="/advertise.html">Advertise</a>&nbsp;|&nbsp;<a style="color:#000000;" href="/submit.html">Submit Your Site</a>&nbsp;|&nbsp;<a style="color:#000000;" href="/contact.html">Contact Us</a></font></div></center></td>
+ <td><center><div class="footer"><font color="#FFFFFF"><a href="http://www.GetIndexed.net">GetIndexed.net</a> ©2014 <a href="/privacy.html">Privacy Policy</a> and <a href="/legal.html">Legal</a></font><br><font color="#000000"><a href="/" style="color:#000000;">Home</a>&nbsp;|&nbsp;<a style="color:#000000;" href="/about.html">About</a>&nbsp;|&nbsp;<a style="color:#000000;" href="/newsletter.html">Newsletter</a>&nbsp;|&nbsp;<a style="color:#000000;" href="/advertise.html">Advertise</a>&nbsp;|&nbsp;<a style="color:#000000;" href="/submit.html">Submit Your Site</a>&nbsp;|&nbsp;<a style="color:#000000;" href="/contact.html">Contact Us</a></font></div></center></td>
 
  </tr>
  </tbody></table><script type="text/javascript">
@@ -339,4 +349,5 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-10133450-1");
 pageTracker._trackPageview();
 </script>
+
 </body></html>
