--- a/m/mo/mot/motifator.com.html
+++ b/m/mo/mot/motifator.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the motifator.com privacy policy that was archived on 2013-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131127110719id_/http%3A//www.motifator.com/index.php/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the motifator.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214132933id_/http%3A//www.motifator.com/index.php/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>motifator.com - privacypolicy</title>
@@ -40,9 +40,9 @@ var Tips2 = new Tips($$('.Tips2'));
 		<div id="signup">
 <form method="post" action="http://www.motifator.com/index.php">
 <div class="hiddenFields">
-<input type="hidden" name="XID" value="d22c9a7bd85cce71c8cc92fad061bf2630e826bb">
+<input type="hidden" name="XID" value="4a3acc62a22535b352c71187e466f82d866eaeb1">
 <input type="hidden" name="ACT" value="9">
-<input type="hidden" name="RET" value="http://www.motifator.com/index.php/privacypolicy">
+<input type="hidden" name="RET" value="http://www.motifator.com/index.php/privacypolicy/">
 <input type="hidden" name="site_id" value="1">
 </div>
 
@@ -76,7 +76,7 @@ var Tips2 = new Tips($$('.Tips2'));
 	<form id="searchform" method="post" action="http://www.motifator.com/index.php">
 <div class="hiddenFields">
 <input type="hidden" name="ACT" value="19">
-<input type="hidden" name="XID" value="81387c82d6500aa6ceabfcedeb285792f67ecaa8">
+<input type="hidden" name="XID" value="c0d9a90a7eb6a7aadc511dbbd027b10d852d01a0">
 <input type="hidden" name="RP" value="search/results">
 <input type="hidden" name="NRP" value="">
 <input type="hidden" name="RES" value="">
@@ -734,20 +734,6 @@ Install Flash Version 9 or later to use the player feature
 		<h3><span class="lblue">new</span>Products <span class="lblue">[YOK]</span></h3>
 	</div>
 	<div id="prodlist" class="modcont">
-		
-		<ul>
-			
-			<li><a href="http://shop.motifator.com/index.php/twiddly-bits-drums-and-percussion2.html"><img src="http://shop.motifator.com/media/catalog/product/cache/1/thumbnail/75x75/9df78eab33525d08d6e5fb8d27136e95/_/c/_cid_814e720a-5d43-4c06-8ab9-415d14dc6dff.png" &#8230;<a="" href="http://shop.motifator.com/index.php/twiddly-bits-drums-and-percussion2.html">Twiddly.Bits Drums And Pe...</a></li>
-			
-			<li><a href="http://shop.motifator.com/index.php/twiddly-bits-dubstep.html"><img src="http://shop.motifator.com/media/catalog/product/cache/1/thumbnail/75x75/9df78eab33525d08d6e5fb8d27136e95/d/u/dubstep-twid-cover-400x400_2.png" &#8230;<a="" href="http://shop.motifator.com/index.php/twiddly-bits-dubstep.html">Twiddly.Bits Dubstep Midi...</a></li>
-			
-			<li><a href="http://shop.motifator.com/index.php/vintage-keys-for-s90-s90es.html"><img src="http://shop.motifator.com/media/catalog/product/cache/1/thumbnail/75x75/9df78eab33525d08d6e5fb8d27136e95/v/i/vintagekeys.jpg" &#8230;<a="" href="http://shop.motifator.com/index.php/vintage-keys-for-s90-s90es.html">Vintage Keys for S90/S90E...</a></li>
-			
-			<li><a href="http://shop.motifator.com/index.php/orchestrale-for-s90es-and-s70xs-s90xs.html"><img src="http://shop.motifator.com/media/catalog/product/cache/1/thumbnail/75x75/9df78eab33525d08d6e5fb8d27136e95/v/_/v_orchestrale_s90.jpg" &#8230;<a="" href="http://shop.motifator.com/index.php/orchestrale-for-s90es-and-s70xs-s90xs.html">Orchestr'ale for S90ES an...</a></li>
-			
-			<li><a href="http://shop.motifator.com/index.php/symphonic-suite-for-s90xs.html"><img src="http://shop.motifator.com/media/catalog/product/cache/1/thumbnail/75x75/9df78eab33525d08d6e5fb8d27136e95/s/y/symphonic-suite.jpg" &#8230;<a="" href="http://shop.motifator.com/index.php/symphonic-suite-for-s90xs.html">Symphonic Suite for S90XS</a></li>
-			
-		</ul>
 		
 	</div>
 </div>
